[package]
name = "enclave-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "1b1d03376056321441ef99716aa0888bd5ef19f7", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { rev = "1b1d03376056321441ef99716aa0888bd5ef19f7", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
log = { version = "0.4.8", default-features = false }
