[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dcap_verifier"
path = "src/bin/main.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "=0.8.12", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.12" }
risc0-zkvm = { version = "1.1", default-features = false, features = ['std'] }
dcap-rs = { git = "https://github.com/bluele/dcap-rs", rev = "c3098b6a3c9faa4a884c87db65d0f586000bcf16" }

[profile.release]
lto = "thin"

[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
p256 = { git = "https://github.com/automata-network/RustCrypto-elliptic-curves.git" }
