[package]
name = "attestation-report"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["extra_traits"] }
tendermint = { version = "0.29", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["alloc"]}
serde = { version = "1.0.184", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto", default-features = false }
lcp-types = { path = "../types", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base64 = { git = "https://github.com/marshallpierce/rust-base64", default-features = false, features = ["alloc"] }

pem = { version = "2.0", default-features = false }
rustls     = { version = "0.19", optional = true }
webpki     = { version = "0.21", optional = true }

[features]
default = ["std"]
std = [
    "rustls",
    "webpki",
    "flex-error/std",
    "serde_json/preserve_order"
]
sgx = []
