[package]
name = "attestation-report"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["extra_traits"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"]}
serde = { version = "1.0.184", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto", default-features = false }
lcp-types = { path = "../types", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
pem = { version = "2.0", default-features = false }
webpki = { version = "0.22", features = ["alloc"] }

dcap-rs = { git = "https://github.com/bluele/dcap-rs", rev = "71fe1e02f151a28bf5661b01dba5096730564840", optional = true }

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros"] }

[features]
default = ["std"]
std = [
    "dcap-rs",
    "webpki/std",
    "flex-error/std",
    "lcp-types/std",
    "serde_json/preserve_order"
]
