[package]
name = "commitments"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false }
ibc = { version = "0.29.0", default-features = false, features = ["serde"] }
log = { version = "0.4.8", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.6", default-features = false }
rlp = { version = "0.5.1", default-features = false }
flex-error = { version = "0.4.4", default-features = false }

lcp-types = { path = "../types", default-features = false }
validation-context = { path = "../validation-context", default-features = false }
crypto = { path = "../crypto", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.8" }
lcp-types = { path = "../types", default-features = false, features = ["std"] }

[features]
default = [
    "prover"
]
prover = [
    "crypto"
]
