[package]
name = "commitments"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc"] }
prost = { version = "0.11", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.6", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
ethabi = { version = "18.0.0", default-features = false }

lcp-types = { path = "../types", default-features = false }
crypto = { path = "../crypto", default-features = false }

[dev-dependencies]
prost-types = { version = "0.11", default-features = false }
rand = { version = "0.8" }
lcp-types = { path = "../types", default-features = false, features = ["std"] }
proptest = "1.2.0"

[features]
default = []
