[package]
name = "context"
version = "0.1.0"
edition = "2021"

[dependencies]
ibc = { version = "0.29.0", default-features = false, features = ["serde"] }
prost-types = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
log = { version = "0.4.8", default-features = false }

bincode-sgx = { package = "bincode", git = "https://github.com/bluele/bincode-sgx", branch = "serde", optional = true }
bincode = { version = "1.3", optional = true }

lcp-types = { path = "../types", default-features = false }
store = { path = "../store", default-features = false }
crypto = { path = "../crypto", default-features = false }
light-client = { path = "../light-client", default-features = false }
light-client-registry = { path = "../light-client-registry", default-features = false }

[features]
default = ["std"]
std = [
    "bincode"
]
sgx = [
    "bincode-sgx"
]
