[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", optional = true }
sgx_tseal = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", optional = true }

rand = { version = "0.8", default-features = false, optional = true }
tiny-keccak = "2.0"
serde = { version = "1.0.184", default-features = false, features = ["alloc", "derive"] }
serde-big-array = "0.5.1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
flex-error = { version = "0.4.4", default-features = false }
libsecp256k1 = { rev = "48dabd8821852c5fe00b846f6c37e1f6b05c3d8c", git = "https://github.com/paritytech/libsecp256k1", default-features = false, features = ["static-context", "hmac"] }
zeroize = { version = "1.8.1", default-features = false, features = ["alloc", "zeroize_derive"] }

[features]
default = ["std"]
std = [
    "rand/default",
    "flex-error/std"
]
sgx = [
    "sgx_trts",
    "sgx_tseal"
]
