[package]
name = "dcap-qvl"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "This crate implements the quote verification logic for DCAP (Data Center Attestation Primitives) in pure Rust."
authors = ["Kevin Wang <wy721@qq.com>", "Jun Kimura <jun.kimura@datachain.jp>"]

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
chrono = { version = "0.4.31", default-features = false, features = [
    "alloc",
    "serde",
] }
const-oid = { version = "0.9.5", default-features = false }
x509-cert = { version = "0.2.4", default-features = false }
pem = { version = "3", default-features = false }
asn1_der = { version = "0.7", default-features = false, features = [
    "native_types",
] }
der = { version = "0.7.8", default-features = false, features = ["alloc"] }
anyhow = { version = "1", default-features = false }
ring = { version = "0.16.20", default-features = false, features = [
    "alloc",
] }
reqwest = { version = "0.11.27", optional = true, default-features = false, features = [
    "rustls-tls",
    "blocking",
    "hickory-dns",
] }
urlencoding = { version = "2", optional = true }
serde_json = { version = "1.0.108", default-features = false, features = [
    "alloc",
] }

[dependencies.webpki]
version = "0.102.7"
package = "rustls-webpki"
default-features = false
features = ["alloc", "ring"]

[dev-dependencies]
insta = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["std", "report"]
std = [
    "serde/std",
    "scale/std",
    "scale-info/std",
    "anyhow/std",
    "ring/std",
    "webpki/std",
    "const-oid/std",
    "pem/std",
    "asn1_der/std",
    "der/std",
    "reqwest",
    "urlencoding",
]
report = ["std"]
