[package]
name = "ecall-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ibc = { version = "0.29.0", default-features = false, features = ["serde"] }
flex-error = { version = "0.4.4", default-features = false }

commitments = { path = "../commitments", default-features = false }
lcp-types = { path = "../types", default-features = false }
attestation-report = { path = "../attestation-report", default-features = false }
store = { path = "../store", default-features = false }
lcp-proto = { path = "../../proto", default-features = false }

[features]
default = ["std"]
std = ["lcp-types/std"]
