[package]
name = "ecall-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["extra_traits"] }
serde = { version = "1.0.184", default-features = false, features = ["alloc", "derive"] }
serde_with = { version = "2.0.1", default-features = false, features = ["alloc", "macros"] }
flex-error = { version = "0.4.4", default-features = false }

commitments = { path = "../commitments", default-features = false }
lcp-types = { path = "../types", default-features = false }
attestation-report = { path = "../attestation-report", default-features = false }
store = { path = "../store", default-features = false }
crypto = { path = "../crypto", default-features = false }

[features]
default = ["std"]
std = [
    "flex-error/std",
    "lcp-types/std"
]
