[package]
name = "ecall-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
ibc = { git = "https://github.com/informalsystems/ibc-rs", rev = "e8c98d440949abf971ac45a68ed9dd9e6e9f48ed", default-features = false }
prost-types = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

log = { version = "0.4.8", optional = true }
log-sgx = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
anyhow = { version = "1.0.56", optional = true }
anyhow-sgx = { package = "anyhow", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
thiserror = { version = "1.0.30", optional = true }
thiserror-sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx.git", optional = true }
bincode = { version = "1.3", optional = true }
bincode-sgx = { package = "bincode", git = "https://github.com/bluele/bincode-sgx", branch = "serde", optional = true }

enclave-utils = { path = "../../enclave-modules/utils", optional = true }
enclave-remote-attestation = { path = "../../enclave-modules/remote-attestation", optional = true }

lcp-types = { path = "../types", default-features = false }
light-client = { path = "../light-client", default-features = false }
crypto = { path = "../crypto", default-features = false }
settings = { path = "../settings", default-features = false }
ecall-commands = { path = "../ecall-commands", default-features = false }
commitments = { path = "../commitments", default-features = false }
attestation-report = { path = "../attestation-report", default-features = false }
context = { path = "../context", default-features = false }
store = { path = "../store", default-features = false }

[features]
default = ["std"]
std = [
    "anyhow",
    "thiserror",
    "log",
    "bincode",
    "lcp-types/std",
    "light-client/std",
    "crypto/std",
    "settings/std",
    "ecall-commands/std",
    "commitments/std",
    "attestation-report/std",
    "context/std",
    "store/std"
]
sgx = [
    "sgx_tstd",
    "enclave-utils",
    "enclave-remote-attestation",
    "anyhow-sgx",
    "thiserror-sgx",
    "log-sgx",
    "bincode-sgx",
    "lcp-types/sgx",
    "light-client/sgx",
    "crypto/sgx",
    "settings/sgx",
    "ecall-commands/sgx",
    "commitments/sgx",
    "attestation-report/sgx",
    "context/sgx",
    "store/sgx"
]
