[package]
name = "enclave-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_urts = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
bincode = "1.3"
log = "0.4.8"
flex-error = { version = "0.4.4" }

ecall-commands = { path = "../ecall-commands", features = ["std"] }
lcp-proto = { path = "../../proto", features = ["server"] }
store = { path = "../store" }
host = { path = "../host" }

[features]
default = ["rocksdb"]
rocksdb = ["store/rocksdbstore"]
sgx-sw = ["ecall-commands/sgx-sw"]
