[package]
name = "enclave-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_urts = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde", "alloc"] }
log = "0.4.8"
flex-error = { version = "0.4.4" }
rsa = { version = "0.9.2", features = ["pem"], optional = true }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"], optional = true }

ecall-commands = { path = "../ecall-commands", features = ["std"] }
keymanager = { path = "../keymanager" }
store = { path = "../store" }
host = { path = "../host" }
attestation-report = { path = "../attestation-report" }
lcp-proto = { path = "../../proto", features = ["server"] }

[features]
default = ["rocksdb"]
rocksdb = ["store/rocksdbstore"]
sgx-sw = [
    "rsa",
    "sha2",
    "ecall-commands/sgx-sw"
]
