[package]
name = "enclave-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
prost-types = { version = "0.9", default-features = false }
ibc = {git = "https://github.com/bluele/ibc-rs", branch = "sgx", default-features = false }
log = "0.4.8"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rlp = { version = "0.5.1", default-features = false }
rlp-derive = { version = "0.1.0" }
anyhow-sgx = { package = "anyhow", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
anyhow = { version = "1.0.56", optional = true }
thiserror-sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx.git", optional = true }
thiserror = { version = "1.0.30", optional = true }
commitments = { path = "../commitments", default-features = false }

[features]
default = ["std"]
std = [
    "anyhow",
    "thiserror",
    "commitments/std"
]
sgx = [
    "sgx_tstd",
    "anyhow-sgx",
    "thiserror-sgx",
    "commitments/sgx"
]
