[package]
name = "handler"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
ibc = {git = "https://github.com/bluele/ibc-rs", branch = "sgx", default-features = false }
prost-types = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "display"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

log = { version = "0.4.8", optional = true }
log-sgx = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
anyhow = { version = "1.0.56", optional = true }
anyhow-sgx = { package = "anyhow", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
thiserror = { version = "1.0.30", optional = true }
thiserror-sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx.git", optional = true }
bincode = { version = "1.3", optional = true }
bincode-sgx = { package = "bincode", git = "https://github.com/bluele/bincode-sgx", branch = "serde", optional = true }

enclave-utils = { path = "../../enclave-modules/utils", optional = true }
enclave-remote-attestation = { path = "../../enclave-modules/remote-attestation", optional = true }

light-client = { path = "../light-client", default-features = false }
crypto = { path = "../crypto", default-features = false }
settings = { path = "../settings", default-features = false }
enclave-commands = { path = "../enclave-commands", default-features = false }
commitments = { path = "../commitments", default-features = false }
attestation-report = { path = "../attestation-report", default-features = false }
context = { path = "../context", default-features = false }
store = { path = "../store", default-features = false }

[features]
default = ["std"]
std = [
    "anyhow",
    "thiserror",
    "log",
    "bincode",
    "light-client/std",
    "crypto/std",
    "settings/std",
    "enclave-commands/std",
    "commitments/std",
    "attestation-report/std",
    "context/std",
    "store/std"
]
sgx = [
    "sgx_tstd",
    "enclave-utils",
    "enclave-remote-attestation",
    "anyhow-sgx",
    "thiserror-sgx",
    "log-sgx",
    "bincode-sgx",
    "settings/sgx",
    "enclave-commands/sgx",
    "commitments/sgx",
    "attestation-report/sgx",
    "context/sgx",
    "store/sgx"
]
