[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_urts = { rev = "1b1d03376056321441ef99716aa0888bd5ef19f7", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_types = { rev = "1b1d03376056321441ef99716aa0888bd5ef19f7", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
log = "0.4.8"
once_cell = "1.15.0"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde", "alloc"] }

ocall-commands = { path = "../ocall-commands" }
ocall-handler = { path = "../ocall-handler" }
host-environment = { path = "../host-environment" }
