[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_urts = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
log = "0.4.8"
once_cell = "1.15.0"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde", "alloc"] }

ocall-commands = { path = "../ocall-commands" }
ocall-handler = { path = "../ocall-handler", default-features = false }

[features]
default = []
rocksdb = [
    "ocall-handler/rocksdb"
]
test = []