[package]
name = "lcp-ibc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
ibc = { git = "https://github.com/informalsystems/ibc-rs", rev = "e8c98d440949abf971ac45a68ed9dd9e6e9f48ed", default-features = false }
ibc-proto = { git = "https://github.com/informalsystems/ibc-rs", rev = "e8c98d440949abf971ac45a68ed9dd9e6e9f48ed", default-features = false }
tendermint-proto = { version = "=0.23.7", default-features = false }
prost = { version = "0.10", default-features = false }
prost-types = { version = "0.10", default-features = false }
tiny-keccak = "1.4"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

lcp-types = { path = "../types", default-features = false }
context = { path = "../context", default-features = false }
commitments = { path = "../commitments", default-features = false }
validation-context = { path = "../validation-context", default-features = false }
attestation-report = { path = "../attestation-report", default-features = false }
light-client = { path = "../light-client", default-features = false  }
lcp-proto = { path = "../../proto", default-features = false }
crypto = { path = "../crypto", default-features = false }

log = { version = "0.4.8", optional = true }
log-sgx = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
anyhow = { version = "1.0.56", optional = true }
anyhow-sgx = { package = "anyhow", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
thiserror = { version = "1.0.30", optional = true }
thiserror-sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx.git", optional = true }
libsecp256k1 = { version = "0.3.5", optional = true }
libsecp256k1-sgx = { package = "libsecp256k1", rev = "sgx_1.1.3-patch", git = "https://github.com/bluele/libsecp256k1-rs-sgx", optional = true }

[dev-dependencies]
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
tempdir = "0.3.7"
mock-lc = { path = "../mock-lc" }
handler = { path = "../handler" }
store = { path = "../store" }
enclave-commands = { path = "../enclave-commands" }

[features]
default = ["std"]
std = [
    "log",
    "anyhow",
    "thiserror",
    "libsecp256k1",
    "lcp-types/std",
    "context/std",
    "commitments/std",
    "validation-context/std",
    "attestation-report/std",
    "light-client/std",
    "crypto/std"
]
sgx = [
    "sgx_tstd",
    "log-sgx",
    "anyhow-sgx",
    "thiserror-sgx",
    "libsecp256k1-sgx",
    "lcp-types/sgx",
    "context/sgx",
    "commitments/sgx",
    "validation-context/sgx",
    "attestation-report/sgx",
    "light-client/sgx",
    "crypto/sgx"
]
