[package]
name = "lcp-ibc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ibc = { git = "https://github.com/informalsystems/ibc-rs", rev = "e8c98d440949abf971ac45a68ed9dd9e6e9f48ed", default-features = false }
ibc-proto = { git = "https://github.com/informalsystems/ibc-rs", rev = "e8c98d440949abf971ac45a68ed9dd9e6e9f48ed", default-features = false }
tendermint-proto = { version = "=0.23.7", default-features = false }
prost = { version = "0.10", default-features = false }
prost-types = { version = "0.10", default-features = false }
tiny-keccak = "1.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
flex-error = { version = "0.4.4", default-features = false }
log = { version = "0.4.8", default-features = false }

lcp-types = { path = "../types", default-features = false }
commitments = { path = "../commitments", default-features = false }
validation-context = { path = "../validation-context", default-features = false }
attestation-report = { path = "../attestation-report", default-features = false }
light-client = { path = "../light-client", default-features = false }
lcp-proto = { path = "../../proto", default-features = false }
crypto = { path = "../crypto", default-features = false }

[dev-dependencies]
tempdir = "0.3.7"
mock-lc = { path = "../mock-lc" }
store = { path = "../store" }
context = { path = "../context" }
light-client-registry = { path = "../light-client-registry", default-features = false }
crypto = { path = "../crypto", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
    "attestation-report/std",
]
sgx = [
    "attestation-report/sgx",
]
