[package]
name = "lcp-ibc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ibc = { version = "0.29.0", default-features = false, features = ["serde"] }
ibc-proto = { version = "0.26.0", default-features = false, features = ["parity-scale-codec", "borsh"] }
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
flex-error = { version = "0.4.4", default-features = false }

lcp-types = { path = "../types", default-features = false }
commitments = { path = "../commitments", default-features = false }
validation-context = { path = "../validation-context", default-features = false }
attestation-report = { path = "../attestation-report", default-features = false }
light-client = { path = "../light-client", default-features = false }
lcp-proto = { path = "../../proto", default-features = false }
crypto = { path = "../crypto", default-features = false }

[dev-dependencies]
tempdir = "0.3.7"
ibc = { version = "0.29.0", default-features = false, features = ["serde", "std"] }
mock-lc = { path = "../mock-lc" }
store = { path = "../store" }
context = { path = "../context" }
light-client-registry = { path = "../light-client-registry", default-features = false, features = ["std"] }
crypto = { path = "../crypto", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
    "lcp-types/std",
    "attestation-report/std",
]
sgx = [
    "lcp-types/sgx",
    "attestation-report/sgx",
]
